# swagger.yaml
@@ -318,6 +318,36 @@ paths:
                   $ref: "#/definitions/Coin"
         500:
           description: Server internal error
+  "/staking/delegators/{delegatorAddr}/validators":
+    get:
+      summary: Query all validators that a delegator is bonded to
+      tags:
+        - Staking
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            properties:
+              height:
+                type: string
+              result:
+                type: array
+                items:
+                  "$ref": "#/definitions/Validator"
+        '400':
+          description: Invalid delegator address
+        '500':
+          description: Internal Server Error
+      parameters:
+        - in: path
+          name: delegatorAddr
+          description: Bech32 AccAddress of Delegator
+          required: true
+          type: string
+          x-example: terra1wg2mlrxdmnnkkykgqg4znky86nyrtc45q336yv
 
 
 definitions:
@@ -946,3 +976,61 @@ definitions:
       amount:
         type: string
         example: "50"
+  ValidatorAddress:
+    type: string
+    description: bech32 encoded address
+    example: terravaloper1wg2mlrxdmnnkkykgqg4znky86nyrtc45q7a85l
+  Validator:
+    type: object
+    properties:
+      operator_address:
+        "$ref": "#/definitions/ValidatorAddress"
+      consensus_pubkey:
+        type: string
+        example: terravalconspub1zcjduepq7mft6gfls57a0a42d7uhx656cckhfvtrlmw744jv4q0mvlv0dypskehfk8
+      jailed:
+        type: boolean
+      status:
+        type: integer
+      tokens:
+        type: string
+      delegator_shares:
+        type: string
+      description:
+        type: object
+        properties:
+          moniker:
+            type: string
+          identity:
+            type: string
+          website:
+            type: string
+          details:
+            type: string
+      bond_height:
+        type: string
+        example: '0'
+      bond_intra_tx_counter:
+        type: integer
+        example: 0
+      unbonding_height:
+        type: string
+        example: '0'
+      unbonding_time:
+        type: string
+        example: '1970-01-01T00:00:00Z'
+      commission:
+        type: object
+        properties:
+          rate:
+            type: string
+            example: '0'
+          max_rate:
+            type: string
+            example: '0'
+          max_change_rate:
+            type: string
+            example: '0'
+          update_time:
+            type: string
+            example: '1970-01-01T00:00:00Z'
